<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_ndef_lang"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/et_ndef_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/build_ndef_lang_hint"
        android:inputType="text"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_ndef_label_content"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/et_ndef_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/build_ndef_value_hint"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="4"
        android:importantForAutofill="no" />

</LinearLayout>